    concurrent steps to run at a time if threads per core is greater than 1.
 -- In existing allocations SLURM_GPUS_PER_NODE environment variable will be
    ignored by srun if --gpus is specified.
 -- When using --get-user-env explicitly or implicitly, check if PID or mnt
    namespaces are disabled and fall back to old logic that does not rely on
    them when they are not available.

* Changes in Slurm 24.05.3
==========================
 -- data_parser/v0.0.40 - Added field descriptions
 -- slurmrestd - Avoid creating new slurmdbd connection per request to
    '* /slurm/slurmctld/*/*' endpoints.
 -- Fix compilation issue with switch/hpe_slingshot plugin.
 -- Fix gres per task allocation with threads-per-core.
 -- data_parser/v0.0.41 - Added field descriptions
 -- slurmrestd - Change back generated OpenAPI schema for
    `DELETE /slurm/v0.0.40/jobs/` to RequestBody instead of using parameters
    for request. slurmrestd will continue accept endpoint requests via
    RequestBody or HTTP query.

* Changes in Slurm 24.05.2
==========================
 -- Fix energy gathering rpc counter underflow in _rpc_acct_gather_energy when
    more than 10 threads try to get energy at the same time. This prevented
    the possibility to get energy from slurmd by any step until slurmd was
    restarted, so losing energy accounting metrics in the node.
 -- accounting_storage/mysql - Fix issue where new user with wckey did not
    have a default wckey sent to the slurmctld.
 -- slurmrestd - Prevent slurmrestd segfault when handling the following
    endpoints when none of the optional parameters are specified:
      'DELETE /slurm/v0.0.40/jobs'
      'DELETE /slurm/v0.0.41/jobs'
      'GET /slurm/v0.0.40/shares'
      'GET /slurm/v0.0.41/shares'
      'GET /slurmdb/v0.0.40/instance'
      'GET /slurmdb/v0.0.41/instance'
      'GET /slurmdb/v0.0.40/instances'
      'GET /slurmdb/v0.0.41/instances'
      'POST /slurm/v0.0.40/job/{job_id}'
      'POST /slurm/v0.0.41/job/{job_id}'