@@ -346,11 +346,7 @@ echo "unset MANPATH"
 echo "print This message has been printed with TaskProlog"
 </pre></p>
 
-<p>Special treatment is given to the <b>SLURM_PROLOG_CPU_MASK</b> variable when
-set in the task prolog. The variable is interpreted as a coma separated list
-of hex maps. It allows you to specify the CPU(s) that will be bound to a
-task and is applied using sched_setaffinity.
-The above functionality is limited to the task prolog script.</p>
+<p>The above functionality is limited to the task prolog script.</p>
 
 <p>Unless otherwise specified, these environment variables are available
 to all of the programs.</p>
@@ -750,6 +746,6 @@ canceled.</p>
 
 <p>Based upon work by Jason Sollom, Cray Inc. and used by permission.</p>
 
-<p style="text-align:center;">Last modified 22 May 2024</p>
+<p style="text-align:center;">Last modified 31 July 2024</p>
 
 <!--#include virtual="footer.txt"-->
